Fix pmd issues for test-mockito module